--- a/python_202411/seoulair.html
+++ b/python_202411/seoulair.html
@@ -21,7 +21,7 @@
 <script>
     //http://openapi.seoul.go.kr:8088/41737a6a6c776a6433374749434a48/json/ListAirQualityByDistrictService/1/50/
     $(function(){
-        const API_KEY='6964717579776a643131385549616a5a';
+        const API_KEY='인증키';
         const url=`http://openapi.seoul.go.kr:8088/${API_KEY}/json/ListAirQualityByDistrictService/1/50/`;
 
         $.ajax({
