--- a/python_202411/school.html
+++ b/python_202411/school.html
@@ -1,5 +1,4 @@
-<!--  LOcFZiRnngW%2BKKKcDEvoXf0%2FUE6lT9ZtulTjTlXJEmW0RJVFs8%2B1JG1rPjF1hJWF2PZsqyWTTLfMqB1coeq9TA%3D%3D
- 카카오 f4dba949864a7e654d7f030505bfddf8-->
+
  <!DOCTYPE html>
  <html lang="en">
  <head>
@@ -9,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f4dba949864a7e654d7f030505bfddf8" data-cookieless="true"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=인증키" data-cookieless="true"></script>
  </head>
  <body>
     <div class="container">
@@ -57,7 +56,7 @@
         }
 
         function loadSchoolData() {
-            const serviceKey = 'LOcFZiRnngW%2BKKKcDEvoXf0%2FUE6lT9ZtulTjTlXJEmW0RJVFs8%2B1JG1rPjF1hJWF2PZsqyWTTLfMqB1coeq9TA%3D%3D';
+            const serviceKey = '인증키';
             const apiUrl = 'http://api.data.go.kr/openapi/tn_pubr_public_elesch_mskul_lc_api';
 
             $.ajax({
