--- a/python_202411/weather.html
+++ b/python_202411/weather.html
@@ -1,4 +1,3 @@
-<!-- http://apis.data.go.kr/1360000/VilageFcstInfoService_2.0/getVilageFcst?serviceKey=LOcFZiRnngW%2BKKKcDEvoXf0%2FUE6lT9ZtulTjTlXJEmW0RJVFs8%2B1JG1rPjF1hJWF2PZsqyWTTLfMqB1coeq9TA%3D%3D&pageNo=1&numOfRows=1000&dataType=JSON&base_date=20241104&base_time=0500&nx=60&ny=127 -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -31,7 +30,7 @@
 
     <script>
         $(function(){
-        const serviceKey='LOcFZiRnngW%2BKKKcDEvoXf0%2FUE6lT9ZtulTjTlXJEmW0RJVFs8%2B1JG1rPjF1hJWF2PZsqyWTTLfMqB1coeq9TA%3D%3D';
+        const serviceKey='인증키';
         const base_date=new Date().toISOString().slice(0,10).replace(/-/g,"");  //20241104
         const base_time="0500"
         const nx=60;
